--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres:
     image: postgres:15
@@ -33,7 +31,7 @@ services:
     container_name: airflow-container
     restart: always
     env_file:
-      - ./app/.env
+      - .env     # <-- Utilisation du même .env à la racine
     ports:
       - "${AIRFLOW_PORT}:8080"
     volumes:
